--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: "Graphik";
+  src: url("./font/GraphikRegular.otf");
+}
+
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-family: "Graphik", sans-serif;
 }
